Bug Fix - State controlled CSS Alignment fix

--- a/v2/src/Game.css
+++ b/v2/src/Game.css
@@ -6,6 +6,7 @@
   cursor: pointer;
   padding: 0;
   margin: 0;
+  vertical-align: middle;
 }
 
 .board-row {
